--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: Myblog # 网站标题
 subtitle: Hello World ! # 网站副标题
 description: I Love You !   # 网站描述
 keywords:
-author: John Doe  # 您的名字
+author: huagang  # 您的名字
 language: zh-Hans # 网站使用的语言
 timezone:   # 网站时区。Hexo 默认使用您电脑的时区。
 
